// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info text should match snapshot for error At least 50% of the vault must be in DFI when taking a loan 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 4
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Insufficient DFI collateral. (≥50%)
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error Cannot payback loan while any of the asset's price is invalid 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 6
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Unable to payback loan due to invalid price.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error Error: Not found, code: 404, message: Page not found 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 0
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        404, message Page not found
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error Lack of liquidity 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 5
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Insufficient liquidity.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error No live fixed prices 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 7
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        No live fixed prices for loan token.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error Swap price is higher than the range allowed by the slippage tolerance. Increase tolerance percentage to proceed. 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 0
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Swap price is higher than the range allowed by the slippage tolerance. Increase tolerance percentage to proceed.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error UnknownError 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text />
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 0
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        UnknownError
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text />
  </View>
</View>
`;

exports[`info text should match snapshot for error Vault does not have enough collateralization ratio defined by loan scheme 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 8
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Vault does not meet min. collateral ratio. Add collateral to proceed.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error amount is less than 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 2
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Insufficient balance. Top up to proceed.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error no prevouts available to create a transaction 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 1
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Insufficient UTXO DFI.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`info text should match snapshot for error not enough balance after combing all prevouts 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          [
            undefined,
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Error Code: 1
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        onTextLayout={[Function]}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Insufficient UTXO DFI.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          [
            {},
            {},
          ],
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
